# property-shared

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.app  GUIDELINES.md  LICENSE  PLAN.md  README.md  RENTAL_ESCALATION_SPEC.md  USER_GUIDE.md  fly.app.toml  fly.toml  phase2_plan.md  phase3_plan.md  pyproject.toml  server.json
.claude/rules/: api-routers.md  cli.md  mcp-server.md  property-core.md  tests.md
.claude/skills/add-data-source/: SKILL.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/add-mcp-tool/: SKILL.md
apify_actors/planning_scraper/: Dockerfile  README.md  actor.json  input_schema.json  main.py  planning_scraper.py  requirements.txt
apify_actors/planning_scraper/.actor/: actor.json
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/api/v1/: analysis.py  companies_house.py  epc.py  health.py  location.py  meta.py  planning.py  ppd.py  report.py  rightmove.py  stamp_duty.py
app/clients/: http.py
app/core/: __init__.py  config.py  logging.py  metrics.py
app/schemas/: epc.py  location.py  planning.py  ppd.py  report.py  rightmove.py
app/services/: __init__.py  epc_service.py  location_service.py  planning_service.py  ppd_service.py  report_service.py  rightmove_service.py
app/tasks/: __init__.py
app/templates/: report.html
app/utils/: polite.py
app/web/: __init__.py  routes.py
app/web/templates/: index.html
docs/: examples.md  examples.py
docs/prefab/: export.md  playground.md  serve.md  welcome.md
docs/prefab/actions/: call-handler.md  call-tool.md  fetch.md  open-file-picker.md  open-link.md  request-display-mode.md  send-message.md  set-interval.md  show-toast.md  update-context.md  update-state.md
docs/prefab/components/: accordion.md  alert.md  area-chart.md  audio.md  badge.md  bar-chart.md  button-group.md  button.md  calendar.md  card.md  carousel.md  checkbox.md  choice-card.md  code.md  column.md  combobox.md  conditional.md  container.md  dashboard-grid.md  data-table.md  date-picker.md  define-use.md  dialog.md  div-span.md  dot.md  drop-zone.md  embed.md  form.md  (+38 more)
example_ref/: epc.py  location.py  location_api.py  mcp_server_002REF.py  rm_scraper.py  vision_scraper.py
example_ref/pp_data/: CLAUDE.md  README.md  ppd_client.py  pyproject.toml  test_ppd.py
mcp_server/: GOLD.md  MCP_APPS_REFERENCE.md  README.md  __init__.py  server.py
mcp_server/mcp-app/: mcp-app.html  package.json  vite.config.ts
mcp_server/ui/: comps_dashboard.html  property_dashboard.html
monitoring/: grafana-dashboard.json
property_app/: README.md  formatting.py  server.py  tools.py
property_app/dashboards/: comps.py  listings.py  rental.py  unified.py  yield_view.py
property_cli/: __init__.py  main.py
property_core/: __init__.py  address_matching.py  block_service.py  companies_house_client.py  enrichment.py  epc_client.py  interpret.py  location_assessor.py  planning_councils.json  planning_diagnostics.py  planning_scraper.py  planning_service.py  postcode_client.py  ppd_client.py  ppd_service.py  rental_service.py  report_service.py  rightmove_location.py  rightmove_scraper.py  stamp_duty.py  yield_service.py
property_core/models/: __init__.py  block.py  companies_house.py  epc.py  planning.py  postcode.py  ppd.py  report.py  rightmove.py
scripts/: update_councils_from_verification.py  verify_councils.py
tests/: test_app_comps.py  test_app_rental.py  test_app_tools.py  test_app_unified.py  test_app_yield.py  test_block_service_live.py  test_companies_house_live.py  test_epc_service_live.py  test_ppd_address_search_live.py  test_ppd_form_search_live.py  test_ppd_service_live.py  test_rental_auto_escalate_live.py  test_rightmove_service_live.py  test_stamp_duty.py  test_yield_service_live.py
(+176 files in other folders)
