[project]
name = "property-shared"
version = "0.1.0"
description = "Shared property tooling: core Python library plus FastAPI wrapper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "httpx>=0.28.1",
  "requests>=2.32.5",
  "tenacity>=9.1.2",
  "beautifulsoup4>=4.14.3",
  "jinja2>=3.1.0",
  "playwright>=1.57.0",
  "openai>=2.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "python-dotenv>=1.0.1",
  "openapi-python-client>=0.28.1",
]
api = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.9.0",
]
demo = [
  "python-multipart>=0.0.9",
]

[project.scripts]
property-api = "app.main:run"
property-cli = "property_cli.main:app"
property-demo = "app.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["property_core", "app", "property_cli"]
include = ["app/web/templates/**"]

[tool.pytest.ini_options]
addopts = "-ra"
