[project]
name = "property-shared"
version = "0.1.0"
description = "Shared property tooling: core Python library plus FastAPI wrapper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.11.9",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "requests>=2.32.5",
  "tenacity>=9.1.2",
  "beautifulsoup4>=4.14.3",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
planning = [
  "playwright>=1.57.0",
  "openai>=1.83.0,<2",
]
dev = [
  "pytest>=9.0.2",
  "python-dotenv>=1.0.1",
  "openapi-python-client>=0.28.1",
]
api = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.9.0",
]
demo = [
  "python-multipart>=0.0.9",
]

[project.scripts]
property-api = "app.main:run"
property-cli = "property_cli.main:app"
property-demo = "app.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["property_core", "app", "property_cli"]
include = ["app/web/templates/**", "app/templates/**"]

[tool.hatch.build.targets.sdist]
exclude = [".uv-cache", ".venv", "*.pyc", "__pycache__", ".pytest_cache", ".git"]

[tool.pytest.ini_options]
addopts = "-ra"
