[project]
name = "property-shared"
version = "1.1.0"
description = "Pure-Python core library + FastAPI service for UK property data (PPD, EPC, Rightmove, Planning)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.11.9",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "requests>=2.32.5",
  "tenacity>=9.1.2",
  "beautifulsoup4>=4.14.3",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
planning = [
  "playwright>=1.57.0",
  "openai>=1.83.0,<2",
]
dev = [
  "pytest>=9.0.2",
  "python-dotenv>=1.0.1",
  "openapi-python-client>=0.28.1",
]
api = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.9.0",
]
demo = [
  "python-multipart>=0.0.9",
]
mcp = [
  "fastmcp>=3.0.0",
]

[project.scripts]
property-api = "app.main:run"
property-cli = "property_cli.main:app"
property-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["property_core", "app", "property_cli", "mcp_server"]
include = ["app/web/templates/**", "app/templates/**", "mcp_server/ui/**"]
exclude = ["mcp_server/mcp-app/node_modules/**"]

[tool.hatch.build.targets.sdist]
exclude = [".uv-cache", ".venv", "*.pyc", "__pycache__", ".pytest_cache", ".git", "mcp_server/mcp-app/node_modules/**"]

[tool.pytest.ini_options]
addopts = "-ra"
